--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -23,9 +23,11 @@ html {
 body {
     min-height: 100%;
     overflow: auto;
+    background-color: #f6f6f6;
+    margin: 10px;
 }
 
-body, h1, p {
+h1, p {
     margin: 0;
 }
 
@@ -52,10 +54,10 @@ div {
 
 #editor {
     min-height: 100%;
-    height: 100%;
+    height: 80%;
     overflow: auto;
     display: block;
-    font-family: 'HelveticaNeue';
-    color:#666666;
+    font-family: 'Open Sans', sans-serif;
+    color: #4a4a4a;
     font-size: 12pt;
 }
