--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -57,7 +57,7 @@ div {
     height: 80%;
     overflow: auto;
     display: block;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
     color: #4a4a4a;
     font-size: 12pt;
 }
