--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -15,6 +15,7 @@
  */
 
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:300&display=swap&subset=korean');
 
 html {
     height: 100%;
