--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -25,7 +25,6 @@ body {
     min-height: 100%;
     overflow: auto;
     background-color: #f6f6f6;
-    margin: 10px;
 }
 
 h1, p {
@@ -61,6 +60,7 @@ img {
 }
 
 #editor {
+    padding: 10px;
     min-height: 100%;
     height: 80%;
     overflow: auto;
